--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>org.redline-rpm</groupId>
 	<artifactId>redline</artifactId>
-	<version>1.2.8-SNAPSHOT</version>
+	<version>1.2.8</version>
 	<packaging>jar</packaging>
 	<name>Redline</name>
 	<description>Redline is a pure Java library for manipulating RPM Package Manager packages.</description>
